// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Database Functions [AVERAGEIFS 4] =AVERAGEIFS($28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, $28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28, >3) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "AVERAGEIFS",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "first",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "second",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "GreaterThan",
    "errors": Array [],
    "meta": undefined,
    "name": ">",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "3",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Database Functions [AVERAGEIFS 100] =AVERAGEIFS($28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, $28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28, >100) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "AVERAGEIFS",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "first",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "second",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "GreaterThan",
    "errors": Array [],
    "meta": undefined,
    "name": ">",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "100",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Database Functions [COLUMN_COUNT] =$28e28190-63bd-4f70-aeca-26e72574c01a.COLUMN_COUNT() 1`] = `
Array [
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "meta": Object {
      "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "name": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Dot",
    "errors": Array [],
    "meta": undefined,
    "name": ".",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "COLUMN_COUNT",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Database Functions [COUNTA] =$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6.COUNTA() 1`] = `
Array [
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "first",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Dot",
    "errors": Array [],
    "meta": undefined,
    "name": ".",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "COUNTA",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Database Functions [COUNTA] =$28e28190-63bd-4f70-aeca-26e72574c01a#2723b7d9-22ce-4d93-b2ef-7cce1b122d64.COUNTA() 1`] = `
Array [
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "third",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#2723b7d9-22ce-4d93-b2ef-7cce1b122d64",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Dot",
    "errors": Array [],
    "meta": undefined,
    "name": ".",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "COUNTA",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Database Functions [COUNTIFS =1] =COUNTIFS($28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, 3) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "COUNTIFS",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "first",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "3",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Database Functions [COUNTIFS >2] =COUNTIFS($28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, >2) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "COUNTIFS",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "first",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "GreaterThan",
    "errors": Array [],
    "meta": undefined,
    "name": ">",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "2",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Database Functions [CountIf error1] =CountIf($28e28190-63bd-4f70-aeca-26e72574c01a, >= 3) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "CountIf",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "meta": Object {
      "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "name": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "GreaterThanEqual",
    "errors": Array [],
    "meta": undefined,
    "name": ">=",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "3",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Database Functions [CountIf ok] =CountIf($28e28190-63bd-4f70-aeca-26e72574c01a, $28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6 >= 3) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "CountIf",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "meta": Object {
      "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "name": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "first",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "GreaterThanEqual",
    "errors": Array [],
    "meta": undefined,
    "name": ">=",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "3",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Database Functions [MAX] =$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6.MAX() 1`] = `
Array [
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "first",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Dot",
    "errors": Array [],
    "meta": undefined,
    "name": ".",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "MAX",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Database Functions [SUM] =$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6.SUM() 1`] = `
Array [
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "first",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Dot",
    "errors": Array [],
    "meta": undefined,
    "name": ".",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "SUM",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Database Functions [SUMIFS >3] =SUMIFS($28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, $28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28, >3) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "SUMIFS",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "first",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "second",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "GreaterThan",
    "errors": Array [],
    "meta": undefined,
    "name": ">",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "3",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Database Functions [SUMIFS 4] =SUMIFS($28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, $28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28, 4) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "SUMIFS",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "first",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "second",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "4",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Database Functions [SUMPRODUCT] =SUMPRODUCT($28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6, $28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "SUMPRODUCT",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "first",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "second",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "number",
  },
]
`;

exports[`Database Functions [Table] =Table([]).toArray() 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "Table",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LBracket",
    "errors": Array [],
    "meta": undefined,
    "name": "[",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "RBracket",
    "errors": Array [],
    "meta": undefined,
    "name": "]",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Dot",
    "errors": Array [],
    "meta": undefined,
    "name": ".",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "toArray",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "Array",
  },
]
`;

exports[`Database Functions [Table] =Table([]).toArray() 2`] = `
Array [
  Object {
    "result": Array [
      Object {
        "result": "Column1",
        "type": "string",
      },
      Object {
        "result": "Column2",
        "type": "string",
      },
    ],
    "type": "Array",
  },
  Object {
    "result": Array [
      Object {
        "result": "1",
        "type": "string",
      },
      Object {
        "result": "2",
        "type": "string",
      },
    ],
    "type": "Array",
  },
  Object {
    "result": Array [
      Object {
        "result": "3",
        "type": "string",
      },
      Object {
        "result": "4",
        "type": "string",
      },
    ],
    "type": "Array",
  },
]
`;

exports[`Database Functions [Table] =Table([{a: 1}, {a: 2}]).toArray() 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "Table",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LBracket",
    "errors": Array [],
    "meta": undefined,
    "name": "[",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LBrace",
    "errors": Array [],
    "meta": undefined,
    "name": "{",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "FunctionName",
    "errors": Array [],
    "meta": undefined,
    "name": "a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "string",
  },
  Object {
    "code": "Colon",
    "errors": Array [],
    "meta": undefined,
    "name": ":",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "1",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RBrace",
    "errors": Array [],
    "meta": undefined,
    "name": "}",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LBrace",
    "errors": Array [],
    "meta": undefined,
    "name": "{",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "FunctionName",
    "errors": Array [],
    "meta": undefined,
    "name": "a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "string",
  },
  Object {
    "code": "Colon",
    "errors": Array [],
    "meta": undefined,
    "name": ":",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "2",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RBrace",
    "errors": Array [],
    "meta": undefined,
    "name": "}",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "RBracket",
    "errors": Array [],
    "meta": undefined,
    "name": "]",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Dot",
    "errors": Array [],
    "meta": undefined,
    "name": ".",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "toArray",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "Array",
  },
]
`;

exports[`Database Functions [Table] =Table([{a: 1}, {a: 2}]).toArray() 2`] = `
Array [
  Object {
    "result": Array [
      Object {
        "result": "a",
        "type": "string",
      },
    ],
    "type": "Array",
  },
  Object {
    "result": Array [
      Object {
        "result": "1",
        "type": "string",
      },
    ],
    "type": "Array",
  },
  Object {
    "result": Array [
      Object {
        "result": "2",
        "type": "string",
      },
    ],
    "type": "Array",
  },
]
`;

exports[`Database Functions [Table] =Table([1,2,3]).toArray() 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "Table",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LBracket",
    "errors": Array [],
    "meta": undefined,
    "name": "[",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "1",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "2",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "3",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "RBracket",
    "errors": Array [],
    "meta": undefined,
    "name": "]",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Dot",
    "errors": Array [],
    "meta": undefined,
    "name": ".",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "toArray",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "Array",
  },
]
`;

exports[`Database Functions [Table] =Table([1,2,3]).toArray() 2`] = `"Table must be an array of records"`;

exports[`Database Functions [VLOOKUP 2 range default] =VLOOKUP("2", $28e28190-63bd-4f70-aeca-26e72574c01a, $28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "VLOOKUP",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "StringLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "\\"2\\"",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "string",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "meta": Object {
      "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "name": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "second",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "string",
  },
]
`;

exports[`Database Functions [VLOOKUP 2 range true] =VLOOKUP("2", $28e28190-63bd-4f70-aeca-26e72574c01a, $28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28, true) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "VLOOKUP",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "StringLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "\\"2\\"",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "string",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "meta": Object {
      "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "name": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "second",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "BooleanLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "true",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "boolean",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "string",
  },
]
`;

exports[`Database Functions [VLOOKUP Column check] =VLOOKUP("", $28e28190-63bd-4f70-aeca-26e72574c01a, $28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "VLOOKUP",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "StringLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "\\"\\"",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "string",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "meta": Object {
      "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "name": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "first",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "string",
  },
]
`;

exports[`Database Functions [VLOOKUP Not found 2 range false] =VLOOKUP("2", $28e28190-63bd-4f70-aeca-26e72574c01a, $28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28, false) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "VLOOKUP",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "StringLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "\\"2\\"",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "string",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "meta": Object {
      "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "name": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "second",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "BooleanLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "false",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "boolean",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "string",
  },
]
`;

exports[`Database Functions [VLOOKUP Not found] =VLOOKUP("", $28e28190-63bd-4f70-aeca-26e72574c01a, $28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "VLOOKUP",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "StringLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "\\"\\"",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "string",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "meta": Object {
      "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "name": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "second",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "string",
  },
]
`;

exports[`Database Functions [VLOOKUP ok number] =VLOOKUP(1, $28e28190-63bd-4f70-aeca-26e72574c01a, $28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "VLOOKUP",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "1",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "meta": Object {
      "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "name": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "second",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "string",
  },
]
`;

exports[`Database Functions [VLOOKUP ok number] =VLOOKUP(1, $28e28190-63bd-4f70-aeca-26e72574c01a, $28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28, false) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "VLOOKUP",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "1",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "meta": Object {
      "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "name": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "second",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "BooleanLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "false",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "boolean",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "string",
  },
]
`;

exports[`Database Functions [VLOOKUP ok number] =VLOOKUP(1, $28e28190-63bd-4f70-aeca-26e72574c01a, $28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28, true) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "VLOOKUP",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "1",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "meta": Object {
      "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "name": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "second",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "BooleanLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "true",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "boolean",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "string",
  },
]
`;

exports[`Database Functions [VLOOKUP ok string] =VLOOKUP("1", $28e28190-63bd-4f70-aeca-26e72574c01a, $28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28) 1`] = `
Array [
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "VLOOKUP",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "StringLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "\\"1\\"",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "string",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "meta": Object {
      "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "name": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Comma",
    "errors": Array [],
    "meta": undefined,
    "name": ",",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "second",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "string",
  },
]
`;

exports[`Database Functions [column] =$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6 1`] = `
Array [
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "first",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
]
`;

exports[`Database Functions [exactin column true] ="foo" in $28e28190-63bd-4f70-aeca-26e72574c01a#2723b7d9-22ce-4d93-b2ef-7cce1b122d64 1`] = `
Array [
  Object {
    "code": "StringLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "\\"foo\\"",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "string",
  },
  Object {
    "code": "In",
    "errors": Array [],
    "meta": undefined,
    "name": "in",
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "third",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#2723b7d9-22ce-4d93-b2ef-7cce1b122d64",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
]
`;

exports[`Database Functions [in column false] =4 in $28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28 1`] = `
Array [
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "4",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "In",
    "errors": Array [],
    "meta": undefined,
    "name": "in",
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "second",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
]
`;

exports[`Database Functions [in column true] =3 in $28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28 1`] = `
Array [
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "3",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "In",
    "errors": Array [],
    "meta": undefined,
    "name": "in",
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "second",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Column",
  },
]
`;

exports[`Database Functions [in database false] =4 in $28e28190-63bd-4f70-aeca-26e72574c01a 1`] = `
Array [
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "4",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "In",
    "errors": Array [],
    "meta": undefined,
    "name": "in",
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "meta": Object {
      "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "name": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
]
`;

exports[`Database Functions [in database true] =3 in $28e28190-63bd-4f70-aeca-26e72574c01a 1`] = `
Array [
  Object {
    "code": "NumberLiteral",
    "errors": Array [],
    "meta": undefined,
    "name": "3",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "number",
  },
  Object {
    "code": "In",
    "errors": Array [],
    "meta": undefined,
    "name": "in",
    "spaceAfter": true,
    "spaceBefore": true,
    "type": "any",
  },
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "meta": Object {
      "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "name": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
]
`;

exports[`Database Functions [toArray] =$28e28190-63bd-4f70-aeca-26e72574c01a.toArray() 1`] = `
Array [
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "meta": Object {
      "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "name": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Dot",
    "errors": Array [],
    "meta": undefined,
    "name": ".",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "toArray",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "Array",
  },
]
`;

exports[`Database Functions [toArray] =$28e28190-63bd-4f70-aeca-26e72574c01a.toArray() 2`] = `
Array [
  Object {
    "result": Array [
      Object {
        "result": "first",
        "type": "string",
      },
      Object {
        "result": "second",
        "type": "string",
      },
      Object {
        "result": "third",
        "type": "string",
      },
    ],
    "type": "Array",
  },
  Object {
    "result": Array [
      Object {
        "result": "1",
        "type": "string",
      },
      Object {
        "result": "2",
        "type": "string",
      },
      Object {
        "result": "3",
        "type": "string",
      },
    ],
    "type": "Array",
  },
  Object {
    "result": Array [
      Object {
        "result": "3",
        "type": "string",
      },
      Object {
        "result": "4",
        "type": "string",
      },
      Object {
        "result": "",
        "type": "string",
      },
    ],
    "type": "Array",
  },
  Object {
    "result": Array [
      Object {
        "result": "5",
        "type": "string",
      },
      Object {
        "result": "6",
        "type": "string",
      },
      Object {
        "result": "Foo",
        "type": "string",
      },
    ],
    "type": "Array",
  },
]
`;

exports[`Database Functions [toRecordArray] =$28e28190-63bd-4f70-aeca-26e72574c01a.toRecordArray() 1`] = `
Array [
  Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "meta": Object {
      "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "name": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "Spreadsheet",
  },
  Object {
    "code": "Dot",
    "errors": Array [],
    "meta": undefined,
    "name": ".",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "toRecordArray",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "LParen",
    "errors": Array [],
    "meta": undefined,
    "name": "(",
    "spaceAfter": true,
    "spaceBefore": false,
    "type": "any",
  },
  Object {
    "code": "RParen",
    "errors": Array [],
    "meta": undefined,
    "name": ")",
    "spaceAfter": false,
    "spaceBefore": true,
    "type": "Array",
  },
]
`;

exports[`Database Functions [toRecordArray] =$28e28190-63bd-4f70-aeca-26e72574c01a.toRecordArray() 2`] = `
Array [
  Object {
    "result": Object {
      "first": "1",
      "second": "2",
      "third": "3",
    },
    "type": "Record",
  },
  Object {
    "result": Object {
      "first": "3",
      "second": "4",
      "third": "",
    },
    "type": "Record",
  },
  Object {
    "result": Object {
      "first": "5",
      "second": "6",
      "third": "Foo",
    },
    "type": "Record",
  },
]
`;

exports[`Database Functions Database Factory 1`] = `
Array [
  Object {
    "columnId": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "index": 0,
    "name": "first",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "rows": Array [
      "1",
      "3",
      "5",
    ],
    "spreadsheetName": "MyTable",
    "type": "text",
  },
  Object {
    "columnId": "4e6f9adb-6f33-454e-9f9e-635dc98e3f28",
    "index": 1,
    "name": "second",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "rows": Array [
      "2",
      "4",
      "6",
    ],
    "spreadsheetName": "MyTable",
    "type": "text",
  },
  Object {
    "columnId": "2723b7d9-22ce-4d93-b2ef-7cce1b122d64",
    "index": 2,
    "name": "third",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "rows": Array [
      "3",
      "",
      "Foo",
    ],
    "spreadsheetName": "MyTable",
    "type": "text",
  },
]
`;

exports[`Database Functions Database Factory 2`] = `
Array [
  Object {
    "2723b7d9-22ce-4d93-b2ef-7cce1b122d64": "3",
    "4e6f9adb-6f33-454e-9f9e-635dc98e3f28": "2",
    "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6": "1",
    "id": "ec4fdfe8-4a12-4a76-aeae-2dea0229e734",
    "sort": "100",
  },
  Object {
    "2723b7d9-22ce-4d93-b2ef-7cce1b122d64": "",
    "4e6f9adb-6f33-454e-9f9e-635dc98e3f28": "4",
    "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6": "3",
    "id": "5d1e4a83-383a-4991-a33c-52a9b3169549",
    "sort": "100",
  },
  Object {
    "2723b7d9-22ce-4d93-b2ef-7cce1b122d64": "Foo",
    "4e6f9adb-6f33-454e-9f9e-635dc98e3f28": "6",
    "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6": "5",
    "id": "05f5ae67-b982-406e-a92f-e559c10a7ba6",
    "sort": "100",
  },
]
`;

exports[`Database Functions Database Factory 3`] = `
Array [
  Array [
    "first",
    "second",
    "third",
  ],
  Array [
    "1",
    "2",
    "3",
  ],
  Array [
    "3",
    "4",
    "",
  ],
  Array [
    "5",
    "6",
    "Foo",
  ],
]
`;

exports[`Database Functions Database Factory 4`] = `
Array [
  Object {
    "first": "1",
    "second": "2",
    "third": "3",
  },
  Object {
    "first": "3",
    "second": "4",
    "third": "",
  },
  Object {
    "first": "5",
    "second": "6",
    "third": "Foo",
  },
]
`;

exports[`Database Functions completion 1`] = `
Object {
  "codeFragment": Object {
    "code": "Spreadsheet",
    "errors": Array [],
    "meta": Object {
      "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
      "name": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  "kind": "spreadsheet",
  "name": "MyTable",
  "namespace": "28e28190-63bd-4f70-aeca-26e72574c01a",
  "preview": DatabaseFactory {
    "blockId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "dynamic": false,
    "listColumns": [Function],
    "listRows": [Function],
    "name": [Function],
  },
  "replacements": Array [
    "MyTable",
  ],
  "value": "$28e28190-63bd-4f70-aeca-26e72574c01a",
  "weight": 10,
}
`;

exports[`Database Functions completion 2`] = `
Object {
  "codeFragment": Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "SUM",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  "kind": "function",
  "name": "SUM",
  "namespace": "core",
  "preview": Object {
    "acceptError": false,
    "args": Array [
      Object {
        "name": "column",
        "type": "Column",
      },
    ],
    "async": false,
    "chain": true,
    "description": "Returns the sum of the column in the database.",
    "effect": false,
    "examples": Array [
      Object {
        "codeFragments": Array [
          Object {
            "code": "NumberLiteral",
            "errors": Array [],
            "meta": undefined,
            "name": "123",
            "spaceAfter": false,
            "spaceBefore": false,
            "type": "number",
          },
        ],
        "input": "=123",
        "output": Object {
          "result": 123,
          "type": "number",
        },
      },
    ],
    "group": "core",
    "key": "SUM",
    "lazy": false,
    "name": "SUM",
    "pure": false,
    "reference": [Function],
    "returns": "number",
    "testCases": Array [],
  },
  "replacements": Array [
    "SUM",
  ],
  "value": "SUM()",
  "weight": 250,
}
`;

exports[`Database Functions completion 3`] = `
Object {
  "codeFragment": Object {
    "code": "Column",
    "errors": Array [],
    "meta": Object {
      "name": "first",
      "spreadsheetName": "MyTable",
    },
    "name": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  "kind": "column",
  "name": "first",
  "namespace": "MyTable",
  "preview": Object {
    "columnId": "62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
    "index": 0,
    "name": "first",
    "namespaceId": "28e28190-63bd-4f70-aeca-26e72574c01a",
    "rows": Array [
      "1",
      "3",
      "5",
    ],
    "spreadsheetName": "MyTable",
    "type": "text",
  },
  "replacements": Array [
    "first",
    "$28e28190-63bd-4f70-aeca-26e72574c01a.first",
    "$28e28190-63bd-4f70-aeca-26e72574c01a.",
    "$28e28190-63bd-4f70-aeca-26e72574c01a",
  ],
  "value": "$28e28190-63bd-4f70-aeca-26e72574c01a#62d9a9ee-88a1-46c7-a929-4a0d9dc0a4d6",
  "weight": 997,
}
`;

exports[`Database Functions completion 4`] = `
Object {
  "codeFragment": Object {
    "code": "Function",
    "errors": Array [],
    "meta": undefined,
    "name": "COLUMN_COUNT",
    "spaceAfter": false,
    "spaceBefore": false,
    "type": "any",
  },
  "kind": "function",
  "name": "COLUMN_COUNT",
  "namespace": "core",
  "preview": Object {
    "acceptError": false,
    "args": Array [
      Object {
        "name": "database",
        "type": "Spreadsheet",
      },
    ],
    "async": false,
    "chain": true,
    "description": "Returns the column size of the database.",
    "effect": false,
    "examples": Array [
      Object {
        "codeFragments": Array [
          Object {
            "code": "NumberLiteral",
            "errors": Array [],
            "meta": undefined,
            "name": "123",
            "spaceAfter": false,
            "spaceBefore": false,
            "type": "number",
          },
        ],
        "input": "=123",
        "output": Object {
          "result": 123,
          "type": "number",
        },
      },
    ],
    "group": "core",
    "key": "COLUMN_COUNT",
    "lazy": false,
    "name": "COLUMN_COUNT",
    "pure": false,
    "reference": [Function],
    "returns": "number",
    "testCases": Array [],
  },
  "replacements": Array [
    "COLUMN_COUNT",
  ],
  "value": "COLUMN_COUNT()",
  "weight": 250,
}
`;
